# tsp_solver

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release.yml
bindings/java/: CMakeLists.txt  README.md  package_smoke.cmake
bindings/java/src/main/cpp/: tsp_solver_java_jni.cpp
bindings/java/src/main/java/tsp/solver/: Algorithm.java  Model.java  NativeLibrary.java  NativeResource.java  Options.java  Result.java  Solver.java  SolverNativeException.java  Status.java  Version.java.in
bindings/java/src/test/java/tsp/solver/: BindingTestMain.java
bindings/python/: CMakeLists.txt  README.md  package_smoke.cmake  pyproject.toml  setup.py
bindings/python/tsp_solver/: __init__.py  _binding.py  _errors.py  _native.py  _version.py
cmake/: ProjectWarnings.cmake  tsp_solverConfig.cmake.in
docs/: branch-protection.md  c_api.md
docs/superpowers/plans/: 2026-03-28-binding-distribution.md  2026-03-28-examples-directory.md  2026-03-28-multi-algorithm-tsp-framework.md  2026-03-28-release-compatibility-policy.md  2026-03-28-tsp-solver-c-api-implementation.md  2026-03-28-tsp-solver-initialization.md  2026-03-28-tsp-solver-java-bindings.md  2026-03-28-tsp-solver-python-bindings.md
docs/superpowers/specs/: 2026-03-28-binding-distribution-design.md  2026-03-28-examples-directory-design.md  2026-03-28-multi-algorithm-tsp-framework-design.md  2026-03-28-release-compatibility-policy-design.md  2026-03-28-tsp-solver-c-api-design.md  2026-03-28-tsp-solver-java-bindings-design.md  2026-03-28-tsp-solver-python-bindings-design.md
examples/: README.md
examples/cpp/: CMakeLists.txt  compare_algorithms.cpp
examples/data/: 20_city_distance_matrix.txt
examples/java/src/main/java/tsp/solver/examples/: CompareAlgorithmsMain.java
examples/python/: compare_algorithms.py
include/tsp_solver/: c_api.h  export.h
include/tsp_solver/algorithms/: held_karp.hpp  local_search.hpp
include/tsp_solver/core/: problem.hpp  tour.hpp
src/: CMakeLists.txt  c_api.cpp
src/algorithms/: held_karp.cpp  local_search.cpp
tests/: CMakeLists.txt  c_api_error_test.cpp  c_api_header_test.c  c_api_header_test.cpp  c_api_runtime_test.cpp  examples_cpp_smoke.cmake  examples_java_smoke.cmake  examples_python_smoke.py  local_search_test.cpp  package_smoke.cmake
tests/java/package_smoke/: PackageSmokeMain.java
tests/package_smoke/: CMakeLists.txt  main.c
tests/python/: package_smoke.py  test_import.py  test_model.py  test_version_compat.py
