[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp-solver"
description = "Python bindings for the tsp_solver native library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "tsp_solver contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["tsp_solver"]

[tool.setuptools.package-data]
tsp_solver = ["*.dll", "*.so", "*.dylib"]
